--- a/resources/i18n/locale-es-ES.json
+++ b/resources/i18n/locale-es-ES.json
@@ -191,7 +191,7 @@
         "2XG": "XXXXL"
     },
 
-    "Em caso de dúvidas entre em contato com": "En caso de duda, póngase en contacto <u><a href='mailto:{{footeremail}}'>con nosotros</a></u> al teléfono {{footertelefone}}",
+    "Em caso de dúvidas entre em contato com": "Si tiene alguna pregunta, contáctenos al teléfono o al correo electrónico a continuación: <br><br> +55 11 3957-6598 – Erika <br><br>Correo eletrónico: <a href='mailto:rsvp@convencaonhsc.com'>rsvp@convencaonhsc.com</a>",
     
     "Hospedagem: quarto com 1 cama ou 2 camas": "Habitación: con 1 cama o 2 camas",
     "1 cama": "1 cama",
