--- a/resources/i18n/locale-pt-BR.json
+++ b/resources/i18n/locale-pt-BR.json
@@ -168,7 +168,7 @@
     "Nome do contato de emergência": "Nome do contato de emergência",
     "Telefone do contato de emergência": "Telefone do contato de emergência",
     "Celular do contato de emergência": "Celular do contato de emergência",
-    "Em caso de dúvidas entre em contato com": "Em caso de dúvidas, entre em contato <u><a href='mailto:{{footeremail}}'>conosco</a></u> pelo telefone {{footertelefone}}",
+    "Em caso de dúvidas entre em contato com": "Em caso de dúvidas, favor entrar em contato nos telefones e e-mail abaixo: <br><br> +55 11 3957-6598 – Erika (RSVP Portugues/Español) <br>+55 11 3957-6555 – Enzo (RSVP Portugues) <br><br>Email: <a href='mailto:rsvp@convencaonhsc.com'>rsvp@convencaonhsc.com</a>",
     "Insira seu e-mail": "Insira seu e-mail",
     "Insira um e-mail válido": "Insira um e-mail válido",
 
