--- a/resources/i18n/locale-es-ES.json
+++ b/resources/i18n/locale-es-ES.json
@@ -18,8 +18,8 @@
     "Sim": "Si",
     "Não": "No",
     "Olá": "Hola",
-    "Enviar": "Send",
-    "Enviado!": "Sent!",
+    "Enviar": "Enviar",
+    "Enviado!": "Enviado!",
     "Cancelar": "Cancel",
     "Remover": "Remove",
     "Finalizar": "Finish",
@@ -146,8 +146,9 @@
     "Órgão emissor": "xxxXXXxxx",
 
     "Passaporte": "Pasaporte",
+    "Número do Passaporte": "Número de Pasaporte",
     "Emissão do passaporte": "Fecha de emisión del pasaporte",
-    "Validade do passaporte": "Fecha de vencimiento del pasaporte",
+    "Validade do passaporte": "Validez del pasaporte",
 
     "Data de nascimento": "Fecha de nacimiento",
     "Cidade de nascimento": "Ciudad de nacimiento",
@@ -228,7 +229,7 @@
     "Telefone Residencial": "Teléfono residencial",
     "Rua": "Dirección",
     "Número": "Número",
-    "Complemento": "Complemento de la dirección",
+    "Complemento": "Complemento",
     "Bairro": "Barrio",
     "Cidade": "Ciudad",
     "UF": "Provincia / Estado",
@@ -251,7 +252,7 @@
     "Fumante": "Fumador",
     "Portador de Necessidades Especiais": "Portador de discapacidad? Cual?",
     "Alergias": "Alergias",
-    "Restrições Alimentares": "Restricciones alimentarias",
+    "Restrições Alimentares": "Restricciones de comidas",
     "Informações Médicas (em caso de gravidez indique aqui)": "Información Médica (en caso de embarazo apunte aquí)",
     "Nome do Contato de Emergência": "Nombre del contacto de emergencia",
     "Telefone do Contato de Emergência": "Teléfono fijo del contacto de emergencia",
