--- a/resources/i18n/locale-es-ES.json
+++ b/resources/i18n/locale-es-ES.json
@@ -149,6 +149,7 @@
     "Número do Passaporte": "Número de Pasaporte",
     "Emissão do passaporte": "Fecha de emisión del pasaporte",
     "Validade do passaporte": "Validez del pasaporte",
+    "Validade do Passaporte": "Validez del pasaporte",
 
     "Data de nascimento": "Fecha de nacimiento",
     "Cidade de nascimento": "Ciudad de nacimiento",
@@ -242,8 +243,9 @@
     "Data de Emissão do RG": "Data de Emissão do RG/RNE",
     "Emissor do RG": "Emissor do RG/RNE",
     "Número do documento de viaje": "Pasaporte",
-    "Data de Emissão do documento de viaje": "Fecha de Emisión del Pasaporte",
+    "Data de Emissão do documento de viaje": "Fecha de emisión del pasaporte",
     "Validade do documento de viaje": "Fecha del vencimento de pasaporte",
+    "Data de Emissão do Passaporte": "Fecha de emisión del pasaporte",
     "Nascimento": "Fecha de Nacimiento",
     "Nacionalidade": "Nacionalidad",
     "Cidade de Nascimento": "Ciudad natal",
@@ -261,7 +263,7 @@
     "Uma cama": "Una cama",
     "Duas camas": "Duas camas",
     "seja bem-vindo(a)!": "bienvenido(a)!",
-    "O prazo limite é dia": "La fecha límite de suscripción es el día",
+    "O prazo limite é dia": "La fecha límite es el",
     "Por favor, clique aqui para inserir a foto do seu documento": "Haga <a href='#!/upload'>clic aqui</a> para cargar la foto de su documento",
     "Perfil editado com sucesso!": "¡Registro completado con éxito!"
     
