--- a/resources/i18n/locale-es-ES.json
+++ b/resources/i18n/locale-es-ES.json
@@ -248,7 +248,7 @@
     "Data de Emissão do Passaporte": "Fecha de emisión del pasaporte",
     "Nascimento": "Fecha de Nacimiento",
     "Nacionalidade": "Nacionalidad",
-    "Cidade de Nascimento": "Ciudad natal",
+    "Cidade de Nascimento": "Ciudad de nacimiento",
     "Manequim": "Talla de su camisa",
     "Tamanho de Camiseta": "Talla de su camisa",
     "Fumante": "Fumador",
